kubernetes/apps/monitoring/kube-web-view/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    hajimari.io/appName: Kube Web View
    hajimari.io/group: observability
    hajimari.io/icon: simple-icons:kubernetes
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Observability
    gethomepage.dev/icon: kubernetes.png
    gethomepage.dev/name: Kube Web View
  name: kube-web-view
spec:
  ingressClassName: internal
  rules:
    - host: kube-web-view.18b.haus
      http:
        paths:
          - backend:
              service:
                name: kube-web-view
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kube-web-view.18b.haus
